# x-note

./: .gitignore  pyproject.toml
x_note/: main.py
x_note/routers/: categories.py  notes.py
