[tool.poetry]
name = "X Note"
version = "0.1.0"
description = "A note API using FastAPI"
authors = ["Hirusha Fernando <heshanhfernando@gmail.com>"]
readme = "README.md"
packages = [{include = "x_note"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
